RESPTHEME-117 Fixed - post meta icon spacing

--- a/core/sass/style.scss
+++ b/core/sass/style.scss
@@ -36,7 +36,7 @@ body {
 
 [class^="icon-"],
 [class*=" icon-"] {
-    margin-right: 5px;
+    margin-right: 0px 5px;
 }
 
 /*--------------------------------------------------------------
